feat(messages): better wording

--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -5,9 +5,6 @@
     "description": {
         "message": "Закрывайте/закрепляйте/открепляйте/группируйте/разгруппируйте несколько вкладок сразу, фильтруя их по различным свойствам."
     },
-    "input_width_css": {
-        "message": "523px"
-    },
     "action_created_notification": {
         "message": "Действие создано."
     },
@@ -138,7 +135,7 @@
         "message": "Открывать новую вкладку после выполнения действия"
     },
     "urls_after_action_label_text": {
-        "message": "URL-адреса, которые будут открыты после выполнен. действия"
+        "message": "URL-адреса, которые будут открыты после выполнения действия"
     },
     "in_which_windows_to_open_tabs_label_text": {
         "message": "В каких окнах открывать вкладки"
@@ -165,10 +162,10 @@
         "message": "Открепить"
     },
     "group_option_text": {
-        "message": "Group"
+        "message": "Сгруппировать"
     },
     "ungroup_option_text": {
-        "message": "Ungroup"
+        "message": "Разгруппировать"
     },
     "current_window_option_text": {
         "message": "Текущее окно"
@@ -195,13 +192,13 @@
         "message": "Вкладки слева"
     },
     "pinned_and_unpinned_option_text": {
-        "message": "Закреплённые + откреплённые"
+        "message": "Закреплённые + незакреплённые"
     },
     "pinned_option_text": {
         "message": "Закреплённые"
     },
     "unpinned_option_text": {
-        "message": "Откреплённые"
+        "message": "Незакреплённые"
     },
     "grouped_and_ungrouped_option_text": {
         "message": "Сгруппированные + несгруппированные"
@@ -239,38 +236,41 @@
     "any_hostname_except_current_option_text": {
         "message": "Любое имя хоста, кроме текущего"
     },
-    "actions_section_help_text": {
-        "message": "Здесь вы можете настроить, какие действия будут отображаться в контекстных меню. Каждое действие закрывает, закрепляет или открепляет вкладки. В контекстном меню иконки расширения может быть до 6 действий. В \"страничном\" контекстном меню их может быть гораздо больше.\n\nЧтобы создать новое действие, сначала выберите любое действие из выпадающего списка \"Действия\". Настройки выбранного действия заполнят поля под кнопками Создать/Обновить/Удалить действие. Отредактируйте эти параметры, и затем нажмите кнопку \"Создать действие\". Новое действие появится в выпадающем меню \"Действия\".\n\nЧтобы обновить действие, сначала выберите его из выпадающего списка \"Действия\". Настройки выбранного действия заполнят поля под кнопками Создать/Обновить/Удалить действие. Отредактируйте эти параметры, и затем нажмите кнопку \"Обновить действие\".\n\nЧтобы удалить действие, выберите его из выпадающего списка \"Действия\" и нажмите кнопку \"Удалить действие\"."
+    "actions_chrome_section_help_text": {
+        "message": "Здесь вы можете настроить действия, отображаемые в контекстных меню. Каждое действие может закрывать, закреплять, откреплять, группировать или разгруппировать вкладки. Контекстное меню иконки расширения может содержать до шести действий, тогда как \"страничное\" контекстное меню может содержать столько действий, сколько вам нужно.\n\nЧтобы создать новое действие, сначала выберите любое действие из выпадающего списка \"Действия\". Настройки выбранного действия заполнят поля под кнопками \"Создать/Обновить/Удалить действие\". Отредактируйте эти параметры, а затем нажмите кнопку \"Создать действие\". Новое действие появится в выпадающем списке \"Действия\".\n\nЧтобы обновить действие, сначала выберите его из выпадающего списка \"Действия\". Настройки выбранного действия заполнят поля под кнопками \"Создать/Обновить/Удалить действие\". Отредактируйте эти параметры, а затем нажмите кнопку \"Обновить действие\".\n\nЧтобы удалить действие, выберите его из выпадающего списка \"Действия\" и нажмите кнопку \"Удалить действие\".\n\nЧтобы назначить горячую клавишу для действия, выполните следующие шаги:\n1. Раскройте выпадающий список \"Действия\" и запомните индекс действия, которому вы хотите присвоить горячую клавишу.\n2. Перейдите по адресу chrome://extensions/shortcuts, найдите Закрыть другие вкладки+ и назначьте горячую клавишу для действия X, где X - индекс выбранного вами действия."
+    },
+    "actions_edge_section_help_text": {
+        "message": "Здесь вы можете настроить действия, отображаемые в контекстных меню. Каждое действие может закрывать, закреплять, откреплять, группировать или разгруппировать вкладки. Контекстное меню иконки расширения может содержать до шести действий, тогда как \"страничное\" контекстное меню может содержать столько действий, сколько вам нужно.\n\nЧтобы создать новое действие, сначала выберите любое действие из выпадающего списка \"Действия\". Настройки выбранного действия заполнят поля под кнопками \"Создать/Обновить/Удалить действие\". Отредактируйте эти параметры, а затем нажмите кнопку \"Создать действие\". Новое действие появится в выпадающем списке \"Действия\".\n\nЧтобы обновить действие, сначала выберите его из выпадающего списка \"Действия\". Настройки выбранного действия заполнят поля под кнопками \"Создать/Обновить/Удалить действие\". Отредактируйте эти параметры, а затем нажмите кнопку \"Обновить действие\".\n\nЧтобы удалить действие, выберите его из выпадающего списка \"Действия\" и нажмите кнопку \"Удалить действие\".\n\nЧтобы назначить горячую клавишу для действия, выполните следующие шаги:\n1. Раскройте выпадающий список \"Действия\" и запомните индекс действия, которому вы хотите присвоить горячую клавишу.\n2. Перейдите по адресу edge://extensions/shortcuts, найдите Закрыть другие вкладки+ и назначьте горячую клавишу для действия X, где X - индекс выбранного вами действия."
     },
     "actions_help_text": {
-        "message": "Все действия в том порядке, в котором они появляются в контекстных меню. Каждое действие закрывает, закрепляет или открепляет вкладки."
+        "message": "Все действия в том порядке, в котором они появляются в контекстных меню. Каждое действие может закрывать, закреплять, откреплять, группировать или разгруппировать вкладки."
     },
     "main_action_help_text": {
-        "message": "Какое действие выполнять при нажатии на иконку расширения. Действие закрывает, закрепляет или открепляет вкладки."
+        "message": "Действие, которое следует выполнять при нажатии на иконку расширения. Действие может закрывать, закреплять, откреплять, группировать или разгруппировать вкладки."
     },
     "action_btns_help_text": {
-        "message": "Чтобы создать новое действие, сначала выберите любое действие из выпадающего списка \"Действия\". Настройки выбранного действия заполнят поля под кнопками Создать/Обновить/Удалить действие. Отредактируйте эти параметры, и затем нажмите кнопку \"Создать действие\". Новое действие появится в выпадающем меню \"Действия\".\n\nЧтобы обновить действие, сначала выберите его из выпадающего списка \"Действия\". Настройки выбранного действия заполнят поля под кнопками Создать/Обновить/Удалить действие. Отредактируйте эти параметры, и затем нажмите кнопку \"Обновить действие\".\n\nЧтобы удалить действие, выберите его из выпадающего списка \"Действия\" и нажмите кнопку \"Удалить действие\"."
+        "message": "Чтобы создать новое действие, сначала выберите любое действие из выпадающего списка \"Действия\". Настройки выбранного действия заполнят поля под кнопками \"Создать/Обновить/Удалить действие\". Отредактируйте эти параметры, а затем нажмите кнопку \"Создать действие\". Новое действие появится в выпадающем списке \"Действия\".\n\nЧтобы обновить действие, сначала выберите его из выпадающего списка \"Действия\". Настройки выбранного действия заполнят поля под кнопками \"Создать/Обновить/Удалить действие\". Отредактируйте эти параметры, а затем нажмите кнопку \"Обновить действие\".\n\nЧтобы удалить действие, выберите его из выпадающего списка \"Действия\" и нажмите кнопку \"Удалить действие\"."
     },
     "action_name_help_text": {
-        "message": "Имя действия, как оно отображается в контекстных меню."
+        "message": "Название действия, отображаемое в контекстных меню."
     },
     "action_position_help_text": {
-        "message": "Определяет порядок действий в контекстных меню."
+        "message": "Определяет позицию действия в контекстных меню."
     },
     "window_url_comparison_help_text": {
-        "message": "Если флажок снят, в качестве основы для сравнения будет использоваться URL-адрес АКТИВНОЙ вкладки текущего окна.\n\nПример:\nУ вас открыто два окна. В каждом из них открыто четыре вкладки, две вкладки facebook.com и две вкладки reddit.com. В первом окне активной вкладкой является facebook.com. Во втором - reddit.com. Вы выполняете действие закрытия вкладок с параметрами \"Все окна\", \"Другие вкладки\" и \"Текущий домен\".\n\nЕсли флажок не установлен, неактивные вкладки facebook.com будут закрыты в обоих окнах.\n\nЕсли флажок установлен, неактивная вкладка facebook.com будет закрыта в первом окне, но во втором окне будет закрыта вкладка reddit.com."
+        "message": "Если флажок снят, в качестве основы для сравнения будет использоваться URL-адрес активной вкладки в ТЕКУЩЕМ окне.\n\nПример:\nУ вас открыто два окна, в каждом из которых по четыре вкладки: две с facebook.com и две с reddit.com. В первом окне активной вкладкой является facebook.com, а во втором - reddit.com. Вы используете действие \"Закрыть\" с параметрами \"Все окна\", \"Другие вкладки\" и \"Текущий домен\".\n\nЕсли флажок снят: Неактивные вкладки facebook.com будут закрыты в каждом окне.\n\nЕсли флажок установлен: Неактивная вкладка facebook.com будет закрыта в первом окне, тогда как во втором окне будет закрыта неактивная вкладка reddit.com."
     },
     "url_whitelist_help_text": {
-        "message": "Определяет, над какими URL-адресами или их частями выполнять действие.\n\nОтменяет эффект \"Воздействовать на вкладки по URL-адресу: Текущий домен\".\n\nОтменяет эффект из поля \"Чёрный список URL-адресов\".\n\nРазделяйте URL-адреса запятыми."
+        "message": "Определяет, над какими URL-адресами или сегментами URL-адресов выполнять действие. Отменяет эффект \"Воздействовать на вкладки по URL-адресу: Текущий URL-адрес/Текущий домен/Текущее имя хоста\". Отменяет эффект \"Чёрный список URL-адресов\".\n\nРазделяйте несколько URL-адресов запятыми."
     },
     "url_blacklist_help_text": {
-        "message": "Определяет, над какими URL-адресами или их частями НЕ выполнять действие.\n\nОтменяет эффект всех опций из выпадающего меню \"Воздействовать на вкладки по URL-адресу\".\n\nЭффект отменяется полем \"Чёрный список URL-адресов\".\n\nРазделяйте URL-адреса запятыми."
+        "message": "Определяет, над какими URL-адресами или сегментами URL-адресов НЕ выполнять действие. Отменяет эффект \"Воздействовать на вкладки по URL-адресу: Текущий URL-адрес/Текущий домен/Текущее имя хоста\". Эффект нивелируется \"Белый список URL-адресов\".\n\nРазделяйте несколько URL-адресов запятыми."
     },
     "urls_after_action_help_text": {
-        "message": "Разделяйте URL-адреса запятыми."
+        "message": "Разделяйте несколько URL-адресов запятыми."
     },
     "tab_counter_is_visible_help_text": {
-        "message": "Показывать количество открытых в данный момент вкладок на иконке расширения."
+        "message": "Отображать количество открытых в данный момент вкладок на иконке расширения."
     },
     "close_other_tabs_plus_chrome_link_text": {
         "message": "⚗️ Закрыть другие вкладки+ для Chrome"
