--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -44,9 +44,6 @@
     "close_all_groups_except_current_default_action_name_text": {
         "message": "Close any group except current"
     },
-    "close_all_group_except_current_default_action_name_text": {
-        "message": "Close current group"
-    },
     "close_other_windows_default_action_name_text": {
         "message": "Close other windows"
     },
@@ -126,7 +123,7 @@
         "message": "Affect tabs by URL"
     },
     "window_url_comparison_label_text": {
-        "message": "Use the URL in the active tab of each window as a basis for comparison"
+        "message": "Use the URL in the active tab of each window as the basis for comparison"
     },
     "url_whitelist_label_text": {
         "message": "URL whitelist"
@@ -135,10 +132,10 @@
         "message": "URL blacklist"
     },
     "open_new_tab_after_action_label_text": {
-        "message": "Open a new tab after the action"
+        "message": "Open a new tab after performing the action"
     },
     "urls_after_action_label_text": {
-        "message": "URLs to be opened after the action"
+        "message": "URLs to open after performing the action"
     },
     "in_which_windows_to_open_tabs_label_text": {
         "message": "In which windows to open tabs"
@@ -147,7 +144,7 @@
         "message": "Show tab counter"
     },
     "enable_action_context_menu_label_text": {
-        "message": "Enable the extension's icon context menu"
+        "message": "Enable the extension icon context menu"
     },
     "enable_on_page_context_menu_label_text": {
         "message": "Enable the \"on page\" context menu"
@@ -239,38 +236,41 @@
     "any_hostname_except_current_option_text": {
         "message": "Any hostname except current"
     },
-    "actions_section_help_text": {
-        "message": "Here, you can define what actions appear in the context menus. Each action closes, pins or unpins tabs. The extension's icon context menu can have up to 6 actions. The \"on page\" context menu can have a lot more.\n\nTo create a new action first, select any action from the \"Actions\" dropdown. The settings of the chosen action will populate the inputs under the Create/Update/Delete action buttons. Edit these settings, then press the \"Create action\" button. The new action will appear in the \"Actions\" dropdown.\n\nTo update an action first, select it from the \"Actions\" dropdown. The settings of the chosen action will populate the inputs under the Create/Update/Delete action buttons. Edit these settings, then press the \"Update action\" button.\n\nTo delete an action, select it from the \"Actions\" dropdown and press the \"Delete action\" button."
+    "actions_chrome_section_help_text": {
+        "message": "Here, you can define which actions appear in the context menus. Each action can close, pin, unpin, group, or ungroup tabs. The extension icon context menu can contain up to six actions, while the \"on page\" context menu can accommodate as many actions as you need.\n\nTo create a new action, first select any action from the \"Actions\" dropdown. The settings for the chosen action will populate the fields under the Create/Update/Delete action buttons. Edit these settings, then press the \"Create action\" button. The new action will then appear in the \"Actions\" dropdown.\n\nTo update an action, first select it from the \"Actions\" dropdown. The settings for the chosen action will populate the fields under the Create/Update/Delete action buttons. Edit these settings, then press the \"Update action\" button.\n\nTo delete an action, select it from the \"Actions\" dropdown and press the \"Delete action\" button.\n\nTo assign a hotkey to an action, follow these steps:\n1. Open the extension settings and go to the \"Actions\" section.\n2. Expand the \"Actions\" dropdown and note the index of the action to which you want to assign a hotkey.\n3. Go to chrome://extensions/shortcuts, locate Close Other Tabs+, and assign a hotkey to Action X, where X is the index of your chosen action."
+    },
+    "actions_edge_section_help_text": {
+        "message": "Here, you can define which actions appear in the context menus. Each action can close, pin, unpin, group, or ungroup tabs. The extension icon context menu can contain up to six actions, while the \"on page\" context menu can accommodate as many actions as you need.\n\nTo create a new action, first select any action from the \"Actions\" dropdown. The settings for the chosen action will populate the fields under the Create/Update/Delete action buttons. Edit these settings, then press the \"Create action\" button. The new action will then appear in the \"Actions\" dropdown.\n\nTo update an action, first select it from the \"Actions\" dropdown. The settings for the chosen action will populate the fields under the Create/Update/Delete action buttons. Edit these settings, then press the \"Update action\" button.\n\nTo delete an action, select it from the \"Actions\" dropdown and press the \"Delete action\" button.\n\nTo assign a hotkey to an action, follow these steps:\n1. Open the extension settings and go to the \"Actions\" section.\n2. Expand the \"Actions\" dropdown and note the index of the action to which you want to assign a hotkey.\n3. Go to edge://extensions/shortcuts, locate Close Other Tabs+, and assign a hotkey to Action X, where X is the index of your chosen action."
     },
     "actions_help_text": {
-        "message": "All actions in the order they appear in the context menus. Each action closes, pins or unpins tabs."
+        "message": "All actions listed in the order they appear in the context menus. Each action can close, pin, unpin, group, or ungroup tabs."
     },
     "main_action_help_text": {
-        "message": "Which action to perform when you press the extension's icon. Action closes, pins or unpins tabs."
+        "message": "Action to perform when pressing the extension icon. Action can close, pin, unpin, group, or ungroup tabs."
     },
     "action_btns_help_text": {
-        "message": "To create a new action first, select any action from the \"Actions\" dropdown. The settings of the chosen action will populate the inputs under the Create/Update/Delete action buttons. Edit these settings, then press the \"Create action\" button. The new action will appear in the \"Actions\" dropdown.\n\nTo update an action first, select it from the \"Actions\" dropdown. The settings of the chosen action will populate the inputs under the Create/Update/Delete action buttons. Edit these settings, then press the \"Update action\" button.\n\nTo delete an action, select it from the \"Actions\" dropdown and press the \"Delete action\" button."
+        "message": "To create a new action, first select any action from the \"Actions\" dropdown. The settings for the chosen action will populate the fields under the Create/Update/Delete action buttons. Edit these settings, then press the \"Create action\" button. The new action will then appear in the \"Actions\" dropdown.\n\nTo update an action, first select it from the \"Actions\" dropdown. The settings for the chosen action will populate the fields under the Create/Update/Delete action buttons. Edit these settings, then press the \"Update action\" button.\n\nTo delete an action, select it from the \"Actions\" dropdown and press the \"Delete action\" button."
     },
     "action_name_help_text": {
-        "message": "A name of an action, as it appears in the context menus."
+        "message": "The name of an action as it appears in the context menus."
     },
     "action_position_help_text": {
-        "message": "Defines the order of an action in the context menus."
+        "message": "Specifies the position of an action within the context menus."
     },
     "window_url_comparison_help_text": {
-        "message": "If unchecked, the URL in the active tab of the CURRENT window will be used as a basis for comparison instead.\n\nExample:\nYou have two windows opened. Each has four tabs opened, two facebook.com tabs and two reddit.com tabs. In the first window, facebook.com is the active tab. In the second, it's reddit.com. You're running close action with the \"All windows\", \"Other tabs\" and \"Current domain\" settings.\n\nIf unchecked, the non-active facebook.com tabs will be closed in both windows.\n\nIf checked, the non-active facebook.com tab will be closed in the first window, but in the second window, it'll be the reddit.com tab."
+        "message": "If unchecked, the URL of the active tab in the CURRENT window will be used as the basis for comparison instead.\n\nExample:\nYou have two windows open, each with four tabs: two with facebook.com and two with reddit.com. In the first window, facebook.com is the active tab, while in the second window, it's reddit.com. You're using the \"Close\" action with the \"All windows\", \"Other tabs\", and \"Current domain\" settings.\n\nIf unchecked: Non-active facebook.com tabs will be closed in both windows.\n\nIf checked: The non-active facebook.com tab will be closed in the first window, while in the second window, it'll be the non-active reddit.com tab."
     },
     "url_whitelist_help_text": {
-        "message": "Defines on which URLs or parts of URLs to perform an action.\n\nCancels out the effect of \"Affect tabs by URL: Current domain\".\n\nCancels out the effect of \"URL blacklist\".\n\nSeparate URLs with commas."
+        "message": "Specifies which URLs or URL segments to perform an action on. Overrides the effect of \"Affect tabs by URL: Current URL/Current domain/Current hostname\". Overrides the effect of the \"URL blacklist\".\n\nSeparate multiple URLs with commas."
     },
     "url_blacklist_help_text": {
-        "message": "Defines on which URLs or parts of URLs to NOT perform an action.\n\nCancels out the effect of all \"Affect tabs by URL\" options.\n\nThe effect is canceled out by \"URL whitelist\".\n\nSeparate URLs with commas."
+        "message": "Separate URLs with commas. Specifies which URLs or URL segments to perform an action on. Overrides the effect of \"Affect tabs by URL: Current URL/Current domain/Current hostname\". The effect is canceled out by \"URL whitelist\".\n\nSeparate multiple URLs with commas."
     },
     "urls_after_action_help_text": {
-        "message": "Separate URLs with commas."
+        "message": "Separate multiple URLs with commas."
     },
     "tab_counter_is_visible_help_text": {
-        "message": "Show the number of currently opened tabs on the extension's icon."
+        "message": "Display the number of currently opened tabs on the extension icon."
     },
     "close_other_tabs_plus_chrome_link_text": {
         "message": "⚗️ Close Other Tabs+ for Chrome"
